# seeduino_xiao_m0_rust

./: Cargo.toml  Taskfile.yaml
.cargo/: config
src/: main.rs
