[package]
name = "seeeduino_xiao_m0"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seeeduino_xiao_m0"
test = false
bench = false

[dependencies]
nb = "1.0.0"
cortex-m = "0.7.6"
panic-halt = "0.2.0"
usbd-serial = "0.1.1"
embedded-hal = "0.2.7"
xiao_m0 = { version = "0.12.0", features = ["usb", "unproven"] }
